# Paradox_Mod_Translator

./: .flake8  .gitignore  BUILD_INSTRUCTIONS.md  CI_BUILD_FIXES.md  CI_CD_GUIDE.md  CONFIGURATION_GUIDE.md  GITHUB_ACTIONS_FIXES.md  OPTIMIZATION_SUMMARY.md  README.md  REFACTORING_REPORT.md  REFACTORING_SUMMARY.md  TRANSLATION_CONFIG_IMPLEMENTATION.md  build.py  cli.py  conftest.py  main.py  main_refactored.py  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements-minimal.txt  requirements.txt  run_quality_checks.py  run_tests.py  start.py  test_configuration.py  test_imports.py  verify_optimization.py
.github/: CODEOWNERS  RELEASE_TEMPLATE.md  pull_request_template.md
.github/workflows/: build-release.yml  test.yml
config/: __init__.py  config_manager.py  constants.py
core/: __init__.py  api_key_manager.py  gemini_translator.py  model_manager.py  parallel_translator.py  translation_workflow.py
gui/: __init__.py  review_dialog.py
parsers/: __init__.py  yml_parser.py
tests/: test_auto_apply_feature.py  test_config_manager.py  test_translation_memory.py  test_yml_parser.py
utils/: __init__.py  file_utils.py  logging_utils.py  translation_memory.py  validation.py
